<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="fragment"
            type="com.planner.feature.tasks.fragment.AddTaskManagerFragment" />

        <variable
            name="tasksViewModel"
            type="com.planner.feature.tasks.viewmodel.TasksViewModel" />

        <variable
            name="addTasksViewModel"
            type="com.planner.feature.tasks.viewmodel.AddTaskViewModel" />

        <variable
            name="taskManagerType"
            type="com.planner.core.data.entity.TaskManagerType" />

        <import type="com.planner.core.data.entity.TaskManagerType" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragment.AddTaskManagerFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/contact_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/task_manager_title">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/colorSurfaceVariant"
                    android:orientation="horizontal"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="8dp">

                    <TextView
                        style="@style/TextAppearance.Material3.TitleMedium"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/contributors" />


                    <Button
                        android:id="@+id/add_going"
                        style="@style/Widget.Material3.Button.TonalButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/add_people"
                        app:icon="@drawable/ic_add" />
                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/going_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:visibility="gone"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
            </LinearLayout>

            <com.google.android.material.button.MaterialButtonToggleGroup
                android:id="@+id/top_button_toggle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:checkedButton="@+id/todo_list_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:singleSelection="true">


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/todo_list_button"
                    style="@style/Widget.Material3.Button.OutlinedButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="@{() -> fragment.setTaskManagementType(TaskManagerType.TODO_LIST)}"
                    android:text="@string/to_do_list"
                    app:iconGravity="textStart"
                    app:managerType="@{TaskManagerType.TODO_LIST}"
                    android:checked="@{addTasksViewModel.taskManagerType == TaskManagerType.TODO_LIST }"
                    app:presentManagerType="@{addTasksViewModel.taskManagerType}" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/project_button"
                    style="@style/Widget.Material3.Button.OutlinedButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="@{() -> fragment.setTaskManagementType(TaskManagerType.PROJECT)}"
                    android:text="@string/project"
                    app:iconGravity="textEnd"
                    app:managerType="@{TaskManagerType.PROJECT}"
                    android:checked="@{addTasksViewModel.taskManagerType == TaskManagerType.PROJECT }"
                    app:presentManagerType="@{addTasksViewModel.taskManagerType}" />

            </com.google.android.material.button.MaterialButtonToggleGroup>

            <TextView
                android:id="@+id/title"
                style="@style/TextAppearance.Material3.TitleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/title"
                app:layout_constraintStart_toStartOf="@id/task_manager_title"
                app:layout_constraintTop_toBottomOf="@id/top_button_toggle" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/task_manager_title"
                style="@style/Widget.Material3.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:hint="@string/title"
                android:maxWidth="488dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/task_manager_title_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:importantForAutofill="no"
                    android:inputType="textCapWords"
                    android:singleLine="false" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:id="@+id/task_row"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="vertical"
                android:paddingVertical="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:background="?attr/colorPrimaryContainer"
                app:layout_constraintTop_toBottomOf="@id/contact_layout">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="4dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/top_button_toggle">

                    <TextView
                        style="@style/TextAppearance.Material3.TitleMedium"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/task_list" />

                    <Button
                        android:id="@+id/add_to_list_button"
                        style="@style/Widget.Material3.Button.TonalButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="@{() -> fragment.addToListClicked()}"
                        android:text="@string/add_to_list"
                        app:icon="@drawable/ic_add" />
                </LinearLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/contributor_name_input_layout"
                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:hint="@string/contributor_name"
                    android:visibility="gone">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/contributor_name_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/task_title_input_layout"
                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:hint="@string/task_title"
                    android:visibility="gone"
                    android:layout_marginTop="4dp"
                    tools:visibility="visible">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/task_title_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:importantForAutofill="no"
                        android:inputType="textCapSentences"
                        android:singleLine="true" />
                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:id="@+id/task_button_row"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:gravity="right"
                    android:orientation="horizontal"
                    android:visibility="gone"
                    android:layout_marginTop="4dp"
                    tools:visibility="visible">

                    <Button
                        style="@style/Widget.Material3.Button.TextButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="@{() -> fragment.closeAddToList()}"
                        android:text="@string/close" />

                    <Button
                        android:id="@+id/add_task"
                        style="@style/Widget.Material3.Button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="@{() -> fragment.addTask()}"
                        android:text="@string/add" />
                </LinearLayout>
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/tasks_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:paddingHorizontal="16dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/task_row"
                android:orientation="vertical"
                tools:listitem="@layout/contact_list_item" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:gravity="right"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tasks_recycler_view">

                <Button
                    style="@style/Widget.Material3.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="@{() -> fragment.close()}"
                    android:text="@string/go_back" />

                <Button
                    android:id="@+id/save_button"
                    style="@style/Widget.Material3.Button.TonalButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="@{() -> fragment.saveTaskManager()}"
                    android:text="@string/save"
                    app:enabledWithList="@{addTasksViewModel.taskList}" />

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>