<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tasks_nav_graph"
    app:startDestination="@id/taskManagerListFragment">

    <include app:graph="@navigation/contacts_manager_navigation_graph" />

    <fragment
        android:id="@+id/addTaskManagerFragment"
        android:name="com.planner.feature.tasks.fragment.AddTaskManagerFragment"
        android:label="@string/new_task">
        <action
            android:id="@+id/action_addTaskManagerFragment_to_taskManagerListFragment"
            app:destination="@id/taskManagerListFragment"
            app:popUpTo="@id/tasks_nav_graph"
...
